Fix alignment

--- a/src/app/pages/flight-search/flight-search.component.scss
+++ b/src/app/pages/flight-search/flight-search.component.scss
@@ -49,11 +49,32 @@
   mat-form-field {
     width: 100%;
   }
+
+}
+
+.date-row {
+  grid-template-columns: 1fr 40px 1fr;
+  align-items: start;
+
+  .checkbox-container {
+    height: auto;
+    margin-top: 8px;
+    grid-column: 2 / 4;
+    justify-self: start;
+  }
+
+  .spacer {
+    display: none;
+  }
 }
 
 .cities-row {
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr 40px 1fr;
   align-items: start;
+
+  .swap-btn {
+    justify-self: center;
+  }
 
   @media (max-width: 500px) {
     grid-template-columns: 1fr;
